--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+Version 0.06 
+ - String::Escape prereq added
 
 Sat May 29 21:38:03 EST 2004
- - version 0.01 released as Regexp::Genex
+ - version 0.05 released as Regexp::Genex
